--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "simplebar": "^6.2.7",
+    "simplebar-react": "^3.2.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
