--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "simplebar": "^6.2.7",
     "simplebar-react": "^3.2.6"
